apps/external/haos/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haos-svc
  namespace: default
spec:
  type: ExternalName
  externalName: 10.10.152.110
  ports:
  - port: 8123
    targetPort: 8123
    protocol: TCP
    name: http
