apps/external/haos/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: haos-ing-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`haos.dcunha.io`)
    kind: Rule
    services:
    - name: haos-svc
      port: 8123
    middlewares:
    - name: default-headers
  tls:
    secretName: dcunha-io-tls
    # domains:
    # - main: pihole.dcunha.io
